# nrf52832-pac

./: .gitignore  Cargo.toml  README.md  fix_svd.py  nrf52.svd  nrf52832_fixed.svd  update.sh
nrf51/: Cargo.toml
nrf51/src/: lib.rs
nrf51/src/aar/: mod.rs
nrf51/src/aar/addrptr/: mod.rs
nrf51/src/aar/enable/: mod.rs
nrf51/src/aar/intenclr/: mod.rs
nrf51/src/aar/intenset/: mod.rs
nrf51/src/aar/irkptr/: mod.rs
nrf51/src/aar/nirk/: mod.rs
nrf51/src/aar/status/: mod.rs
nrf51/src/adc/: mod.rs
nrf51/src/adc/busy/: mod.rs
nrf51/src/adc/config/: mod.rs
nrf51/src/adc/enable/: mod.rs
nrf51/src/adc/intenclr/: mod.rs
nrf51/src/adc/intenset/: mod.rs
nrf51/src/adc/result/: mod.rs
nrf51/src/ccm/: mod.rs
nrf51/src/ccm/cnfptr/: mod.rs
nrf51/src/ccm/enable/: mod.rs
nrf51/src/ccm/events_endksgen/: mod.rs
nrf51/src/ccm/inptr/: mod.rs
nrf51/src/ccm/intenclr/: mod.rs
nrf51/src/ccm/intenset/: mod.rs
nrf51/src/ccm/micstatus/: mod.rs
nrf51/src/ccm/mode/: mod.rs
nrf51/src/ccm/outptr/: mod.rs
nrf51/src/ccm/scratchptr/: mod.rs
nrf51/src/ccm/shorts/: mod.rs
nrf51/src/clock/: mod.rs
nrf51/src/clock/ctiv/: mod.rs
nrf51/src/clock/events_done/: mod.rs
nrf51/src/clock/events_hfclkstarted/: mod.rs
nrf51/src/clock/hfclkrun/: mod.rs
nrf51/src/clock/hfclkstat/: mod.rs
nrf51/src/clock/intenclr/: mod.rs
nrf51/src/clock/intenset/: mod.rs
nrf51/src/clock/lfclkrun/: mod.rs
nrf51/src/clock/lfclksrc/: mod.rs
nrf51/src/ecb/: mod.rs
nrf51/src/ficr/: mod.rs
nrf51/src/gpio/: mod.rs
nrf51/src/gpiote/: mod.rs
nrf51/src/lpcomp/: mod.rs
nrf51/src/nvmc/: mod.rs
nrf51/src/power/: mod.rs
nrf51/src/ppi/: mod.rs
nrf51/src/qdec/: mod.rs
nrf51/src/radio/: mod.rs
nrf51/src/rng/: mod.rs
nrf51/src/rtc0/: mod.rs
nrf51/src/spi0/: mod.rs
nrf51/src/spis1/: mod.rs
nrf51/src/swi/: mod.rs
nrf51/src/temp/: mod.rs
nrf51/src/timer0/: mod.rs
nrf51/src/twi0/: mod.rs
nrf51/src/uart0/: mod.rs
nrf51/src/uicr/: mod.rs
nrf51/src/wdt/: mod.rs
nrf52840/: Cargo.toml  README.md
nrf52840/src/: lib.rs
nrf52840/src/acl/: mod.rs
nrf52840/src/cc_host_rgf/: mod.rs
nrf52840/src/ccm/: mod.rs
nrf52840/src/clock/: mod.rs
nrf52840/src/comp/: mod.rs
nrf52840/src/cryptocell/: mod.rs
nrf52840/src/ecb/: mod.rs
nrf52840/src/egu0/: mod.rs
nrf52840/src/ficr/: mod.rs
nrf52840/src/gpiote/: mod.rs
nrf52840/src/i2s/: mod.rs
nrf52840/src/mwu/: mod.rs
nrf52840/src/nfct/: mod.rs
nrf52840/src/nvmc/: mod.rs
nrf52840/src/p0/: mod.rs
nrf52840/src/pdm/: mod.rs
nrf52840/src/power/: mod.rs
nrf52840/src/ppi/: mod.rs
nrf52840/src/pwm0/: mod.rs
nrf52840/src/qdec/: mod.rs
nrf52840/src/qspi/: mod.rs
nrf52840/src/radio/: mod.rs
nrf52840/src/rtc0/: mod.rs
nrf52840/src/saadc/: mod.rs
nrf52840/src/spi0/: mod.rs
nrf52840/src/spim0/: mod.rs
nrf52840/src/timer0/: mod.rs
nrf52840/src/twi0/: mod.rs
nrf52840/src/twim0/: mod.rs
nrf52840/src/twis0/: mod.rs
nrf52840/src/uart0/: mod.rs
nrf52840/src/uarte0/: mod.rs
nrf52840/src/uicr/: mod.rs
nrf52840/src/usbd/: mod.rs
nrf52840/src/wdt/: mod.rs
(+1990 files in other folders)
