[package]
version = "0.4.1"
authors = [
    "James Munns <james.munns@gmail.com>",
    "Hanno Braun <hanno@braun-robotics.com>"
]
description = "DEPRECATED: Use `nrf52832-pac` instead"
documentation = "https://docs.rs/nrf52"
keywords = ["no-std", "arm", "cortex-m", "nrf52"]
license = "MIT OR Apache-2.0"
name = "nrf52"
repository = "https://github.com/nrf-rs/nrf52832-pac"

[dependencies]
bare-metal = "0.2.1"
vcell = "0.1"
cortex-m = "0.5.3"

[dependencies.cortex-m-rt]
optional = true
version = "0.5.1"

[features]
rt = ["cortex-m-rt/device"]
